# sphinx-design-elements

./: .gitignore  .readthedocs.yml  CHANGES.md  LICENSE  MANIFEST.in  README.md  codecov.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  main.yml
docs/: backlog.md  conf.py  css_classes.md  dropdown-group.md  get_started.md  gridtable.md  hyper.md  index.md  infocard.md  linktree.md  project.md  sandbox.md  shield.md  tag.md
docs/_templates/: linktree-demo.html  page.html
docs/smartinclude/: index.rst  member.rst  root.rst
docs/snippets/: index.md
docs/snippets/myst/: dropdown-group.md  gridtable.md  hyper.md  infocard.md  shield.md  tag.md
docs/snippets/rst/: dropdown-group.rst  gridtable.rst  infocard.rst  shield.rst  tag.rst
sphinx_design_elements/: __init__.py  dropdown_group.py  extension.py  gridtable.py  hyper.py  infocard.py  linktree.py  navigation.py  shield.py  tag.py
sphinx_design_elements/compiled/: style.css
sphinx_design_elements/lib/: linktree.py
sphinx_design_elements/util/: directive.py  role.py
tests/: conftest.py  test_hyper.py  test_linktree.py  test_package.py  test_snippets.py  test_util.py  util.py
tests/test_snippets/: snippet_myst_post_dropdown-group.xml  snippet_myst_post_gridtable.xml  snippet_myst_post_hyper.xml  snippet_myst_post_infocard.xml  snippet_myst_post_tag.xml  snippet_myst_pre_hyper.xml  snippet_myst_pre_infocard.xml  snippet_myst_pre_tag.xml  snippet_rst_post_dropdown-group.xml  snippet_rst_post_gridtable.xml  snippet_rst_post_infocard.xml  snippet_rst_post_shield.xml  snippet_rst_pre_dropdown-group.xml  snippet_rst_pre_infocard.xml
