[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42", # At least v42 of setuptools required.
  "versioningit",
]

[project]
name = "sphinx-design-elements"
description = "A collection of composite web elements based on components from sphinx-design."
readme = "README.md"
keywords = [
  "authoring",
  "badge",
  "css",
  "design",
  "documentation",
  "dropdown",
  "extension",
  "flexbox",
  "grid",
  "layout",
  "markdown",
  "material design",
  "myst",
  "responsive html",
  "restructuredtext",
  "shield",
  "sphinx",
  "sphinx design",
  "table",
  "tag",
  "web components",
]
license = "MIT"
authors = [
  { name = "Andreas Motl", email = "andreas.motl@panodata.org" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Plugins",
  "Environment :: Web Environment",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Extension",
  "Intended Audience :: Customer Service",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Telecommunications Industry",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Documentation",
  "Topic :: Documentation :: Sphinx",
  "Topic :: Education",
  "Topic :: File Formats",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Bug Tracking",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Widget Sets",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Markup",
  "Topic :: Text Processing :: Markup :: HTML",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Text Processing :: Markup :: reStructuredText",
]
dynamic = [
  "version",
]
dependencies = [
  "beautifulsoup4",
  "docutils<0.23",
  "myst-parser",
  "sphinx<10",
  "sphinx-design>=0.6.1,<0.8",
  "standard-imghdr; python_version>='3.13'",
]
optional-dependencies.develop = [
  "black<26",
  "mypy<2.2",
  "poethepoet<1",
  "pyproject-fmt<3",
  "ruff<0.16",
  "types-docutils<0.23",
  "validate-pyproject<1",
]
optional-dependencies.docs = [
  "furo",
  "myst-parser[linkify]>=0.18",
  "sphinx-autobuild",
  "sphinx-copybutton",
]
optional-dependencies.release = [
  "build<2",
  "keyring",
  "twine<7",
]
optional-dependencies.test = [
  "pytest<10",
  "pytest-cov<8",
  "pytest-regressions<3",
  "sphinx[test]",
  "sphinx-pytest<0.4",
  "verlib2",
]
urls.changelog = "https://github.com/tech-writing/sphinx-design-elements/blob/main/CHANGES.md"
urls.documentation = "https://sphinx-design-elements.readthedocs.io/"
urls.homepage = "https://sphinx-design-elements.readthedocs.io/"
urls.repository = "https://github.com/tech-writing/sphinx-design-elements"

[tool.setuptools]
packages.find.namespaces = false

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
lint.select = [
  # Pycodestyle
  "E",
  # eradicate
  "ERA",
  # Pyflakes
  "F",
  # isort
  "I",
  # flake8-quotes
  "Q",
  # return
  "RET",
  # Bandit
  "S",
  # print
  "T20",
  # pyupgrade
  # "UP",
  # flake8-commas
  # "COM",
  # future-annotations
  # "FA",
  # flake8-type-checking
  "TCH",
  "W",
  # flake8-2020
  "YTT",
  # flake8-unused-arguments
  # "ARG",
  # flake8-use-pathlib
  # "PTH"
]
lint.extend-ignore = [
  # zip() without an explicit strict= parameter
  "B905",
  # Unnecessary variable assignment before `return` statement
  "RET504",
  # Unnecessary `elif` after `return` statement
  "RET505",
]
lint.per-file-ignores."docs/conf.py" = [ "ERA001" ]  # Allow commented-out code (ERA001).
lint.per-file-ignores."tests/*" = [ "S101" ]  # Allow use of `assert`, and `print`.

[tool.mypy]
packages = [ "sphinx_design_elements" ]
exclude = []
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false
strict_equality = true
overrides = [ { module = [ "docutils.*" ], ignore_missing_imports = true } ]
install_types = true
no_implicit_optional = true
non_interactive = true
show_error_codes = true

[tool.pytest]
ini_options.minversion = "2.0"
ini_options.testpaths = [
  "sphinx_design_elements",
  "tests",
]
ini_options.addopts = "-rA --verbosity=3 --cov --cov-report=term-missing --cov-report=xml"
ini_options.markers = []
ini_options.xfail_strict = true
ini_options.log_format = "%(asctime)-15s [%(name)-36s] %(levelname)-8s: %(message)s"
ini_options.log_level = "DEBUG"
ini_options.log_cli_level = "DEBUG"

[tool.coverage]
run.branch = false
run.omit = [
  "tests/*",
]
run.source = [ "sphinx_design_elements" ]
report.fail_under = 0
report.show_missing = true

[tool.poe]
# ===================
# Tasks configuration
# ===================
tasks.check = [
  "lint",
  "test",
]
tasks.docs-autobuild = [
  { cmd = "sphinx-autobuild --open-browser --watch sphinx_design_elements docs docs/_build" },
]
tasks.docs-html = [
  { cmd = "sphinx-build --builder=html -W --keep-going docs docs/_build" },
]
tasks.docs-linkcheck = [
  { cmd = "sphinx-build --builder=linkcheck -W --keep-going docs docs/_build" },
]
tasks.format = [
  { cmd = "black ." },
  # Configure Ruff not to auto-fix (remove!):
  # unused imports (F401), unused variables (F841), `print` statements (T201), and commented-out code (ERA001).
  { cmd = "ruff check --fix --ignore=ERA --ignore=F401 --ignore=F841 --ignore=T20 --ignore=ERA001 ." },
  { cmd = "pyproject-fmt --keep-full-version pyproject.toml" },
]
tasks.lint = [
  { cmd = "ruff check ." },
  { cmd = "validate-pyproject pyproject.toml" },
  { cmd = "mypy" },
]
tasks.release = [
  { cmd = "python -m build" },
  { cmd = "twine upload --skip-existing dist/*.tar.gz dist/*.whl" },
]
tasks.test = { cmd = "pytest" }

[tool.versioningit]
vcs.method = "git-archive"
vcs.default-tag = "v0.0.0"
vcs.describe-subst = "$Format:%(describe:tags,match=v*)$"
